update macd-SEAL and README.md

--- a/macd-SEAL/CMakeLists.txt
+++ b/macd-SEAL/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.12)
 
 project(MAIN VERSION 3.4.4 LANGUAGES CXX)
 
-add_executable(main main.cpp)
+add_executable(macd macd)
 
 find_package(SEAL 3.4.4 REQUIRED)
 
 # Link Microsoft SEAL
-target_link_libraries(main SEAL::seal)
+target_link_libraries(macd SEAL::seal)
