--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ macd-SEAL/CMakeFiles
 macd-SEAL/cmake_install.cmake
 macd-SEAL/CMakeCache.txt
 macd-SEAL/Makefile
+macd-SEAL/.ipynb_checkpoints
+macd-HEAAN/run/macd
