--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-**/.DS_Store
+echo .DS_Store >> .gitignore
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
 macd-SEAL/macd
 macd-SEAL/CMakeFiles
 macd-SEAL/cmake_install.cmake
 macd-SEAL/CMakeCache.txt
 macd-SEAL/Makefile
-macd-SEAL/.ipynb_checkpoints
 macd-HEAAN/run/macd
