--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,6 @@ FinancialApplications/macd-SEAL/Makefile
 HEAAN/lib/libHEAAN.a
 GeneralToolbox/EMA-HEAAN/EMA
 GeneralToolbox/ARMA-HEAAN/ARMA
+GeneralToolbox/ARMA-HEAAN/a.out
 HEAAN/lib/src/*
 !HEAAN/lib/src/subdir.mk
