add pid_client and pid_server

--- a/MedicalApplications/pid-SEAL/CMakeLists.txt
+++ b/MedicalApplications/pid-SEAL/CMakeLists.txt
@@ -1,10 +1,18 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(MAIN VERSION 3.4.4 LANGUAGES CXX)
+project(MAIN VERSION 1.0 LANGUAGES CXX)
 
-add_executable(pid pid)
+add_executable(pid pid.cpp)
 
-find_package(SEAL 3.4.4 REQUIRED)
+add_executable(pid_client pid_client.cpp)
+
+add_executable(pid_server pid_server.cpp)
+
+find_package(SEAL 3.6 REQUIRED)
 
 # Link Microsoft SEAL
 target_link_libraries(pid SEAL::seal)
+
+target_link_libraries(pid_client SEAL::seal)
+
+target_link_libraries(pid_server SEAL::seal)
