--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,25 @@ GeneralToolbox/ARMA-HEAAN/a.out
 HEAAN/lib/src/*
 !HEAAN/lib/src/subdir.mk
 MedicalApplications/pid-SEAL/pid
+MedicalApplications/pid-SEAL/pid-test-serialize
 MedicalApplications/pid-SEAL/CMakeFiles
 MedicalApplications/pid-SEAL/cmake_install.cmake
 MedicalApplications/pid-SEAL/CMakeCache.txt
 MedicalApplications/pid-SEAL/Makefile
+MedicalApplications/protobuf/CMakeFiles
+MedicalApplications/protobuf/com
+MedicalApplications/socket_test/*.o
+MedicalApplications/socket_test/client
+MedicalApplications/socket_test/server
+*.out
+*.o
+pid
+pid-serialize-test
+MedicalApplications/socket_test/CMakeFiles
+MedicalApplications/socket_test/cmake_install.cmake
+MedicalApplications/socket_test/CMakeCache.txt
+MedicalApplications/socket_test/Makefile
+CMakeFiles*
+cmake_install.cmake*
+CMakeCache.txt*
+Makefile*
