--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,5 @@ MedicalApplications/socket_test/Makefile
 CMakeFiles*
 cmake_install.cmake*
 CMakeCache.txt*
-Makefile*
+MedicalApplications/pid-SEAL/LocalPID/Makefile
+FinancialApplications/sinc-test/SINC
